<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WakeUpper</string>
    <!-- Activity titles -->
    <string name="title_activity_arithmetic">Арифметика</string>
    <string name="title_activity_choose">Выбор элементов</string>
    <string name="title_activity_unblock">Будильник</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="title_activity_shake">Тряска</string>
    <string name="title_activity_phrase">Ввод по образцу</string>
    <string name="hello_world">Azaza</string>
    <string name="action_settings">Settings</string>

    <!-- For Activities. Created by kanphis on 02.12.14 -->
    <string name="checkAnswer">Проверить</string>
    <string name="correctAnswer">Правильно!</string>
    <string name="kurosawa">Красава!</string>

    <!-- For Arithmetic -->
    <string name="stringOK">OK</string>
    <string name="taskLabel">Решите пример:</string>
    <string name="alertTitle">Результат</string>
    <string name="enterAnswer">Введите ответ</string>
    <string name="incorrectTryAgain">Неправильно! Решите новый пример</string>

    <!-- For Shake. Created by Yamushev Igor on 15.11.14 -->
    <string name="instruction">Потряси меня \n и заполни \n прогресс-бар</string>
    <string name="imgAbout">Shaker Image</string>

    <!-- For Choose. Created by kanphis on 02.12.14 -->
    <string name="choose_description">Выберите числа, кратные</string>
    <string name="tryTryAgain">Неправильно! Попробуйте еще раз</string>

    <!-- For Main. Created by Yamushev Igor on 16.11.14 -->
    <string name="Alarms"> Будильники: </string>
    <string name="addNewAlarm"> Добавить новый </string>

    <!-- For Settings -->
    <string name="buttonCancel">Отменить</string>
    <string name="buttonSave">Сохранить</string>
    <string name="confirm">Подтвердите выбор</string>
    <string name="confirmCancel">Отменить изменения?</string>
    <string name="confirmSave">Сохранить изменения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="timeLabel">Время:</string>
    <string name="daysLabel">Дни:</string>
    <string name="daysMn">Пн</string>
    <string name="daysTu">Вт</string>
    <string name="daysWe">Ср</string>
    <string name="daysTh">Чт</string>
    <string name="daysFr">Пт</string>
    <string name="daysSa">Сб</string>
    <string name="daysSu">Вс</string>
    <string name="volumeLabel">Громкость:</string>
    <string name="signalLabel">Мелодия:</string>
    <string name="activityLabel">Активность:</string>
    <string name="activityArithmetic">Арифметика</string>
    <string name="activityShake">Тряска</string>
    <string name="activityChoose">Выбор</string>
    <string name="activityPhrase">Ввод по образцу</string>
    <string name="activityNoActivity">Без Активности</string>
    <string name="vibrationLabel">Вибрация:</string>
    <string name="errorOnCreateAlarm">Не удалось создать будильник</string>
    <string name="silentRingtone">Без звука</string>

    <!-- For UnblockActivity -->
    <string name="unblock">Отключить</string>

    <!-- For Editor -->
    <string name="untilAlarm">Будильник сработает через</string>
    <string name="days">д</string>
    <string name="hours">ч</string>
    <string name="minutes">мин</string>
    <string name="seconds">с</string>

    <!-- For DataProvider. Created by Yamushev Igor on 04.12.14 -->
    <string name="noSuchIDError">К сожалению произошла ошибка, такого
                 будильника нет в базе. Пожалуйста, создайте новый</string>

    <!-- For PhraseActivity. Created by Sablina Nastya on 12.12.14 -->
    <string name="PhrActTextView01">Введите текст по образцу:</string>
    <string name="PhrActTextView02">Введите текст снова!</string>
    <string name="PhrActTextView1">Случайная фраза</string>
    <string name="PhrActButton">OK</string>

    <string-array name="array0">
        <item>новый</item>
        <item>большой</item>
        <item>должен</item>
        <item>последний</item>
        <item>русский</item>
        <item>общий</item>
        <item>высокий</item>
        <item>хороший</item>
        <item>главный</item>
        <item>лучший</item>
    </string-array>

    <string-array name="array1">
        <item>год</item>
        <item>человек</item>
        <item>день</item>
        <item>раз</item>
        <item>друг</item>
        <item>глаз</item>
        <item>вопрос</item>
        <item>Андрей</item>
        <item>дом</item>
        <item>мир</item>
    </string-array>

    <string-array name="array2">
        <item>был</item>
        <item>мог</item>
        <item>сказал</item>
        <item>говорил</item>
        <item>знал</item>
        <item>стал</item>
        <item>хотел</item>
        <item>шел</item>
        <item>имел</item>
        <item>видел</item>
    </string-array>

    <string-array name="array3">
        <item>думать</item>
        <item>сделать</item>
        <item>жить</item>
        <item>делать</item>
        <item>смотреть</item>
        <item>работать</item>
        <item>понять</item>
        <item>пойти</item>
        <item>спросить</item>
        <item>дать</item>
    </string-array>

    <string-array name="array4">
        <item>жизнь</item>
        <item>руку</item>
        <item>работу</item>
        <item>сторону</item>
        <item>страну</item>
        <item>голову</item>
        <item>силу</item>
        <item>систему</item>
        <item>часть</item>
        <item>женщину</item>
    </string-array>

    <!-- For alarm_list_item. Created by Yamushev Igor on 15.12.14 -->
    <string name="tim00">00:00</string>
    <string name="pnd">П</string>
    <string name="vt">В</string>
    <string name="sr">С</string>
    <string name="cht">Ч</string>
    <string name="pat">П</string>
    <string name="sub">С</string>
    <string name="vsk">В</string>
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>
</resources>
