<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" >

        <TextView
            android:id="@+id/alarm_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/tim00"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/alarm_item_sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/alarm_item_time"
            android:text="@string/pnd"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/alarm_item_monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_item_sunday"
            android:layout_below="@+id/alarm_item_time"
            android:layout_marginLeft="@dimen/listItem"
            android:text="@string/vt"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/alarm_item_tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_item_monday"
            android:layout_below="@+id/alarm_item_time"
            android:layout_marginLeft="@dimen/listItem"
            android:text="@string/sr"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/alarm_item_wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_item_tuesday"
            android:layout_below="@+id/alarm_item_time"
            android:layout_marginLeft="@dimen/listItem"
            android:text="@string/cht"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/alarm_item_thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_item_wednesday"
            android:layout_below="@+id/alarm_item_time"
            android:layout_marginLeft="@dimen/listItem"
            android:text="@string/pat"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/alarm_item_friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_item_thursday"
            android:layout_below="@+id/alarm_item_time"
            android:layout_marginLeft="@dimen/listItem"
            android:text="@string/sub"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/alarm_item_saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/alarm_item_friday"
            android:layout_below="@+id/alarm_item_time"
            android:layout_marginLeft="@dimen/listItem"
            android:text="@string/vsk"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ToggleButton
            android:id="@+id/alarm_item_toggle"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true" />

    </RelativeLayout>

</FrameLayout>